--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.4",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.39.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -45,8 +48,10 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
+    "@types/react-router-dom": "^5.1.8",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react-app-rewire-alias": "^1.0.3",
     "react-app-rewired": "^2.1.8"
