--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
+    "mobx": "^6.3.3",
+    "mobx-react-lite": "^3.2.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
