--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "homepage": "https://kurakinasv.github.io/kts-front-summer-2021/",
   "scripts": {
     "dev": "npx webpack serve --mode development --history-api-fallback",
     "build": "npx webpack --mode=production",
-    "ts-check": "tsc --skipLibCheck --noEmit --project tsconfig.json"
+    "ts-check": "tsc --skipLibCheck --noEmit --project tsconfig.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -26,6 +29,7 @@
     "babel-preset-mobx": "^2.0.0",
     "css-loader": "^6.3.0",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "6.0.1",
